--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                working on full-scale web projects, I strive for performance, accessibility, and great user experience.I'm always excited to take on new challenges and collaborate with others who are just as passionate about tech as I am.</p>
 
 
-            <a href="" download="D:\Code\Susii\portfolio-main\Susi.pdf"><h1>resume </h1> </a>
+            <a href="" "Susi.pdf"><h1>resume </h1> </a>
             
         </div>
 
@@ -246,3 +246,4 @@
 </body>
 
 </html>
+
