--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div class="about" id="abt">
         <p class="stick one">About</p>
         <div class="text">
-            <p>Hi, I'm Susila, a passionate Web Developer with a strong focus on building responsive and user-friendly websites. I love turning ideas into functional, clean, and modern web applications using the latest web technologies.
+            <p1>Hi, I'm Susila, a passionate Web Developer with a strong focus on building responsive and user-friendly websites. I love turning ideas into functional, clean, and modern web applications using the latest web technologies.
                With experience in both front-end and back-end development, I enjoy solving real-world problems through code and constantly learning new tools to improve my craft. Whether it's developing a personal portfolio or  
-               working on full-scale web projects, I strive for performance, accessibility, and great user experience.I'm always excited to take on new challenges and collaborate with others who are just as passionate about tech as I am.</p>
+               working on full-scale web projects, I strive for performance, accessibility, and great user experience.I'm always excited to take on new challenges and collaborate with others who are just as passionate about tech as I am.</p1>
 
 
             <a href="Susi.pdf"><h1>resume </h1> </a>
@@ -245,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
