--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
      <div class="context-text">
         <div class="contact-list">
             <li> <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
-            <dotlottie-player src="https://lottie.host/f03d428d-2c59-4232-8c1f-bb5ad429b549/Ft4h5U8ZXK.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player></i> susila491@gmail.com</li>
+            <dotlottie-player src="https://lottie.host/f03d428d-2c59-4232-8c1f-bb5ad429b549/Ft4h5U8ZXK.lottie" background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></dotlottie-player></i>msusila1702@gmail.com</li>
             <li><i class="fa-solid fa-phone"></i>8072811448</li>
             <div class="logo">
             <a href="https://m.facebook.com/profile.php?id=100041346438362&name=xhp_nt_"> <svg class="facebook"  xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -245,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
